--- a/components/alert/alert.less
+++ b/components/alert/alert.less
@@ -15,7 +15,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: @z-index-overlay;
+  z-index: @z-index-overlay + @z-index-overlay-alert;
 
   display: flex;
 
