--- a/components/landscape-prompt/landscape-prompt.less
+++ b/components/landscape-prompt/landscape-prompt.less
@@ -1,4 +1,7 @@
 .vm-landscape-prompt {
+  z-index: 2000;
+  position: fixed;
+
   @-webkit-keyframes rotation {
     10% {
       transform: rotate(90deg);
@@ -57,7 +60,7 @@
     right: 0;
     bottom: 0;
     background: #000;
-    z-index: 9997;
+
   }
 
   .mod-orient-layer__content {
