--- a/components/modal/modal.less
+++ b/components/modal/modal.less
@@ -33,7 +33,7 @@
 
   contain: strict;
 
-  z-index: 12;
+  z-index: @z-index-overlay-modal;
 }
 
 .ion-modal .ion-backdrop {
