--- a/components/themes/index.less
+++ b/components/themes/index.less
@@ -11,16 +11,16 @@
 @z-index-menu-reveal: 80;
 @z-index-menu-push: 80;
 @z-index-menu-overlay: 80;
-
 @z-index-menu-backdrop: 79;
 
+// overlay z-index orders
 @z-index-overlay: 1000;
-@z-index-overlay-backdrop: 50;
-@z-index-overlay-modal: 100;
-@z-index-overlay-actionSheet: 150;
-@z-index-overlay-alert: 200;
-@z-index-overlay-loading: 250;
 @z-index-overlay-toast: 300;
+@z-index-overlay-loading: 250;
+@z-index-overlay-alert: 200;
+@z-index-overlay-actionSheet: 150;
+@z-index-overlay-modal: 100;
+
 
 @z-index-click-block: 99999;
 
